working through the pdf compiles

--- a/business-planning/documents/executive/executive-summary.tex
+++ b/business-planning/documents/executive/executive-summary.tex
@@ -112,12 +112,14 @@ Community & Peer networking and collaborative learning \\
             \textbf{Basic}\\[0.5em]
             \pounds{29}/month\\[0.5em]
             \small
-            \begin{tabular}{l}
-            • Core courses\\
-            • Community access\\
-            • Basic support\\
-            • Mobile app
-            \end{tabular}
+            \begin{minipage}[t]{3cm}
+            \begin{itemize}[leftmargin=*,noitemsep,label=\textbullet]
+                \item Core courses
+                \item Community access
+                \item Basic support
+                \item Mobile app
+            \end{itemize}
+            \end{minipage}
         };
 
     % Professional tier
@@ -125,13 +127,15 @@ Community & Peer networking and collaborative learning \\
             \textbf{Professional}\\[0.5em]
             \pounds{79}/month\\[0.5em]
             \small
-            \begin{tabular}{l}
-            • All Basic features\\
-            • AI personalisation\\
-            • Career coaching\\
-            • Certificates\\
-            • Priority support
-            \end{tabular}
+            \begin{minipage}[t]{3cm}
+            \begin{itemize}[leftmargin=*,noitemsep,label=\textbullet]
+                \item All Basic features
+                \item AI personalisation
+                \item Career coaching
+                \item Certificates
+                \item Priority support
+            \end{itemize}
+            \end{minipage}
         };
 
     % Premium tier
@@ -139,13 +143,15 @@ Community & Peer networking and collaborative learning \\
             \textbf{Premium}\\[0.5em]
             \pounds{149}/month\\[0.5em]
             \small
-            \begin{tabular}{l}
-            • All Pro features\\
-            • 1-on-1 mentoring\\
-            • Custom paths\\
-            • Job placement\\
-            • White-glove service
-            \end{tabular}
+            \begin{minipage}[t]{3cm}
+            \begin{itemize}[leftmargin=*,noitemsep,label=\textbullet]
+                \item All Pro features
+                \item 1-on-1 mentoring
+                \item Custom paths
+                \item Job placement
+                \item White-glove service
+            \end{itemize}
+            \end{minipage}
         };
 \end{tikzpicture}
 \end{center}
@@ -440,9 +446,9 @@ We are raising \pounds{5 million} in Series A funding to accelerate growth and a
 
 Investment terms:
 \begin{itemize}
-    \item Amount: \pounds 5,000,000
-    \item Pre-money valuation: \pounds 25,000,000
-    \item Post-money valuation: \pounds 30,000,000
+    \item Amount: \pounds{5,000,000}
+    \item Pre-money valuation: \pounds{25,000,000}
+    \item Post-money valuation: \pounds{30,000,000}
     \item Equity offered: 16.67\%
     \item Type: Series A Preferred Stock
     \item Board representation: 1 investor board seat
@@ -473,7 +479,7 @@ Investment terms:
 \subsection{Key Risks and Mitigation}
 
 \begin{riskbox}
-\begin{tabular}{@{}ll@{}}
+\begin{tabularx}{\textwidth}{@{}>{\raggedright\arraybackslash}p{4cm}X@{}}
 \toprule
 \textbf{Risk} & \textbf{Mitigation Strategy} \\
 \midrule
@@ -483,7 +489,7 @@ Customer acquisition costs & Diversified channels, referral programme \\
 Talent retention & Equity participation, strong culture \\
 Regulatory changes & Compliance team, industry engagement \\
 \bottomrule
-\end{tabular}
+\end{tabularx}
 \end{riskbox}
 
 \section{Exit Strategy}
@@ -509,7 +515,7 @@ Potential exit strategies include:
 
     \item \textbf{IPO} (Years 5-7)
     \begin{itemize}
-        \item Requires \pounds{100M+ revenue
+        \item Requires \pounds{100M}+ revenue
         \item Strong public market comparables
         \item Expected valuation: 6-10x revenue
     \end{itemize}
@@ -522,11 +528,11 @@ TechVenture represents a compelling investment opportunity in the rapidly growin
 
 \textbf{Key Investment Highlights}:
 \begin{itemize}
-    \item \pounds{15B addressable market growing at 25\% CAGR
+    \item \pounds{15B} addressable market growing at 25\% CAGR
     \item Proven product-market fit with 5,000+ paying users
     \item Strong unit economics: 8:1 CLV:CAC ratio
     \item Experienced team with successful exits
-    \item Clear path to \pounds{28M revenue by Year 5
+    \item Clear path to \pounds{28M} revenue by Year 5
     \item Multiple exit opportunities with strategic buyers
 \end{itemize}
 
