--- a/business-planning/documents/pitch/investor-pitch-deck.tex
+++ b/business-planning/documents/pitch/investor-pitch-deck.tex
@@ -92,7 +92,7 @@
 \column{0.5\textwidth}
 \begin{block}{The Opportunity}
 \begin{itemize}
-    \item \pounds 15 billion UK professional education market
+    \item \pounds{15 billion} UK professional education market
     \item 45\% annual growth in online learning
     \item Underserved mid-career professionals
     \item Scalable SaaS platform
@@ -102,9 +102,9 @@
 \column{0.5\textwidth}
 \begin{block}{The Ask}
 \begin{itemize}
-    \item Raising \pounds 5 million Series A
+    \item Raising \pounds{5 million} Series A
     \item 20\% equity stake
-    \item \pounds 25 million pre-money valuation
+    \item \pounds{25 million} pre-money valuation
     \item Use: Product development \& market expansion
 \end{itemize}
 \end{block}
@@ -238,7 +238,7 @@
 
     % TAM box
     \node[rectangle,draw=accent-green,fill=accent-green!20,line width=2pt,minimum width=8cm,minimum height=1.5cm,align=center] at (4,-3.5) {
-            \Large\textbf{TAM: \pounds 4.2B | SAM: \pounds 1.8B | SOM: \pounds 180M}
+            \Large\textbf{TAM: \pounds{4.2B} | SAM: \pounds{1.8B} | SOM: \pounds{180M}}
         };
 \end{tikzpicture}
 \end{center}
@@ -251,15 +251,15 @@
 \column{0.5\textwidth}
 \begin{block}{B2C Subscriptions}
 \begin{itemize}
-    \item Basic: \pounds 29/month
-        \item Professional: \pounds 79/month
-        \item Premium: \pounds 149/month
+    \item Basic: \pounds{29}/month
+        \item Professional: \pounds{79}/month
+        \item Premium: \pounds{149}/month
 \end{itemize}
 \end{block}
 
 \begin{block}{B2B Enterprise}
 \begin{itemize}
-    \item Team licences: \pounds 99/user/month
+    \item Team licences: \pounds{99}/user/month
     \item Custom content creation
     \item White-label solutions
 \end{itemize}
@@ -291,8 +291,8 @@
 \toprule
 \textbf{Metric} & \textbf{Current} & \textbf{Target (Year 2)} \\
 \midrule
-Customer Acquisition Cost (CAC) & \pounds 150 & \pounds 100 \\
-Customer Lifetime Value (CLV) & \pounds 1,200 & \pounds 2,400 \\
+Customer Acquisition Cost (CAC) & \pounds{150} & \pounds{100} \\
+Customer Lifetime Value (CLV) & \pounds{1,200} & \pounds{2,400} \\
 CLV:CAC Ratio & 8:1 & 24:1 \\
 Gross Margin & 75\% & 85\% \\
 Monthly Churn Rate & 5\% & 2.5\% \\
@@ -328,7 +328,7 @@ Monthly Churn Rate & 5\% & 2.5\% \\
 \begin{center}
 \begin{tikzpicture}
     \node[circle,draw=accent-orange,fill=accent-orange!20,line width=3pt,minimum size=3cm,align=center] {
-        \LARGE\textbf{\pounds 150K}\\[0.3em]
+        \LARGE\textbf{\pounds{150}K}\\[0.3em]
         \large MRR
     };
 \end{tikzpicture}
@@ -410,7 +410,7 @@ Industry-Specific Content & \checkmark & \texttimes & \checkmark \\
 Career Coaching & \checkmark & \texttimes & \texttimes \\
 Outcome Guarantee & \checkmark & \texttimes & \texttimes \\
 Enterprise Solutions & \checkmark & \checkmark & \texttimes \\
-Price Point & \textbf{\pounds 79} & \pounds 199 & \pounds 49 \\
+Price Point & \textbf{\pounds{79}} & \pounds{199} & \pounds{49} \\
 \bottomrule
 \end{tabular}
 \end{center}
@@ -523,11 +523,11 @@ CMO\\
 \column{0.5\textwidth}
 \begin{block}{Investment Allocation}
 \begin{itemize}
-    \item \textbf{\pounds 2M} - Product \& AI development
-    \item \textbf{\pounds 1.5M} - Customer acquisition
-    \item \textbf{\pounds 750K} - Key hires (20 people)
-    \item \textbf{\pounds 500K} - Infrastructure
-    \item \textbf{\pounds 250K} - Working capital
+    \item \textbf{\pounds{2M}} - Product \& AI development
+    \item \textbf{\pounds{1.5M}} - Customer acquisition
+    \item \textbf{\pounds{750}K} - Key hires (20 people)
+    \item \textbf{\pounds{500}K} - Infrastructure
+    \item \textbf{\pounds{250}K} - Working capital
 \end{itemize}
 \end{block}
 \end{columns}
@@ -540,8 +540,8 @@ CMO\\
 \column{0.5\textwidth}
 \begin{block}{The Deal}
 \begin{itemize}
-    \item \textbf{Amount}: \pounds 5M
-        \item \textbf{Valuation}: \pounds 25M pre-money
+    \item \textbf{Amount}: \pounds{5M}
+        \item \textbf{Valuation}: \pounds{25M} pre-money
     \item \textbf{Type}: Series A Preferred
     \item \textbf{Board Seats}: 1 investor seat
     \item \textbf{Use}: Growth \& expansion
