--- a/business-planning/documents/templates/template-example.tex
+++ b/business-planning/documents/templates/template-example.tex
@@ -51,7 +51,7 @@ Opportunities are presented in green-accented boxes, providing visual distinctio
 The template includes commands for properly formatting financial figures:
 
 \begin{itemize}
-    \item Revenue target: \poundsval{2500000}
+    \item Revenue target: \pounds{2500000}
     \item European expansion: \euros{1800000}
     \item US market opportunity: \dollars{3200000}
 \end{itemize}
